; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/vm/extr_vm_map.c_vm_map_write_user.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/vm/extr_vm_map.c_vm_map_write_user.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@KERN_SUCCESS = common dso_local global i32 0, align 4
@KERN_INVALID_ADDRESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vm_map_write_user(i64 %0, i8* %1, i32 %2, i32 %3) #0 {
  %5 = alloca i64, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i64, align 8
  store i64 %0, i64* %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %11 = load i32, i32* @KERN_SUCCESS, align 4
  store i32 %11, i32* %9, align 4
  %12 = call i64 (...) @current_map()
  %13 = load i64, i64* %5, align 8
  %14 = icmp eq i64 %12, %13
  br i1 %14, label %15, label %24

15:                                               ; preds = %4
  %16 = load i8*, i8** %6, align 8
  %17 = load i32, i32* %7, align 4
  %18 = load i32, i32* %8, align 4
  %19 = call i64 @copyout(i8* %16, i32 %17, i32 %18)
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %23

21:                                               ; preds = %15
  %22 = load i32, i32* @KERN_INVALID_ADDRESS, align 4
  store i32 %22, i32* %9, align 4
  br label %23

23:                                               ; preds = %21, %15
  br label %41

24:                                               ; preds = %4
  %25 = load i64, i64* %5, align 8
  %26 = call i32 @vm_map_reference(i64 %25)
  %27 = load i64, i64* %5, align 8
  %28 = call i64 @vm_map_switch(i64 %27)
  store i64 %28, i64* %10, align 8
  %29 = load i8*, i8** %6, align 8
  %30 = load i32, i32* %7, align 4
  %31 = load i32, i32* %8, align 4
  %32 = call i64 @copyout(i8* %29, i32 %30, i32 %31)
  %33 = icmp ne i64 %32, 0
  br i1 %33, label %34, label %36

34:                                               ; preds = %24
  %35 = load i32, i32* @KERN_INVALID_ADDRESS, align 4
  store i32 %35, i32* %9, align 4
  br label %36

36:                                               ; preds = %34, %24
  %37 = load i64, i64* %10, align 8
  %38 = call i64 @vm_map_switch(i64 %37)
  %39 = load i64, i64* %5, align 8
  %40 = call i32 @vm_map_deallocate(i64 %39)
  br label %41

41:                                               ; preds = %36, %23
  %42 = load i32, i32* %9, align 4
  ret i32 %42
}

declare dso_local i64 @current_map(...) #1

declare dso_local i64 @copyout(i8*, i32, i32) #1

declare dso_local i32 @vm_map_reference(i64) #1

declare dso_local i64 @vm_map_switch(i64) #1

declare dso_local i32 @vm_map_deallocate(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
